# NavalForge-Concept

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  SECURITY.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  release-checks.json  render.yaml
.github/workflows/: ci.yml  live-deployment.yml
backend/: Dockerfile  __init__.py  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  repository.py  schemas.py  tasks.py
databases/comparable_boats/: comparable_boats.csv
databases/engines/: engines.json
databases/equipment/: equipment.json
databases/materials/: materials.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ENGINEERING_METHODS.md  MOBILE_PWA.md  TRACEABILITY.md  VALIDATION.md
examples/: README.md  nf-demo-patrol-10m.json  nf-demo-service-7m.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
navalforge_core/: __init__.py  constants.py  equilibrium.py  evaluator.py  fuel.py  geometry.py  hydrostatics.py  models.py  propulsion.py  reports.py  requirements.py  resistance.py  stability.py  structure.py  tanks.py  units.py  variants.py  weights.py
scripts/: generate_icons.py  seed_examples.py  smoke_live_backend.py  start_linux.sh  start_windows.ps1  sync_frontend_assets.py  verify_project.py
tests/: __init__.py  test_backend_config.py  test_core.py  test_project_api.py  test_project_repository.py
(+28 files in other folders)
