[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navalforge-concept"
version = "0.1.5"
description = "Open, modular and auditable conceptual design platform for planing monohulls"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "NavalForge contributors" }]
dependencies = [
  "numpy>=2.0,<3",
  "scipy>=1.13,<2",
  "pandas>=2.2,<3",
  "shapely>=2.0,<3",
  "trimesh>=4.4,<5",
  "pydantic>=2.8,<3",
  "reportlab>=4.2,<5",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.4,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "psycopg[binary]>=3.2,<4",
  "redis>=5,<7",
  "celery>=5.4,<6"
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2"
]

[tool.setuptools.packages.find]
include = ["navalforge_core*", "backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.coverage.run]
source = ["navalforge_core"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
